# Popcorn

./: .gitignore  LICENSE  Popcorn.code-workspace  README.md  cabal.project  hie.yaml
Common/: CHANGELOG.md  Common.cabal  README.md
Common/Popcorn/Common/: MyLib.hs  Utils.hs
Common/Popcorn/Common/Control/Monad/: Extra.hs
Common/Popcorn/Common/Log/: Logger.hs
Engine/: CHANGELOG.md  Engine.cabal  README.md
Engine/Popcorn/Engine/: Application.hs  Engine.hs  Exception.hs  MyLib2.hs  Settings.hs
Engine/Popcorn/Engine/Managed/: Extra.hs
Engine/Popcorn/Engine/Platform/: GLFW.hs
Engine/Popcorn/Engine/Platform/GLFW/: Init.hs  Utils.hs  Vulkan.hs  Window.hs
Engine/Popcorn/Engine/Platform/GLFW/Internal/: Window.hs
Engine/Popcorn/Engine/Renderer/: Renderer.hs  Vulkan.hs  VulkanRenderer.hs
Engine/Popcorn/Engine/Renderer/Vulkan/: CommandBuffer.hs  Framebuffer.hs  Image.hs  Init.hs  Instance.hs  LogicalDevice.hs  PhysicalDevice.hs  Pipeline.hs  RenderPass.hs  Shader.hs  Surface.hs  Swapchain.hs  Sychronization.hs  Synchronization.hs  Utils.hs
Engine/Popcorn/Engine/Renderer/Vulkan/Internal/: Surface.hs  Vulkan.hs
Engine/Popcorn/Engine/Renderer/Vulkan/Platform/: GLFW.hs
Sandbox/: CHANGELOG.md  Main.hs  README.md  Sandbox.cabal
shaders/: SimpleFS.frag  SimpleVS.vert
