cabal-version:       >=1.10
name:                Engine
version:             0.1.0.0
synopsis:            Experiments in Haskell and 3D
description:         Experiments in Haskell and 3D
homepage:            https://github.com/bitvandal/Popcorn
bug-reports:         https://github.com/bitvandal/Popcorn/issues
license:             MIT
license-file:        LICENSE
author:              José Cegrí
maintainer:          bitvandal@gmail.com
category:            Graphics
build-type:          Simple

tested-with:
  ghc ==8.10.3

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/bitvandal/Popcorn
  subdir:   Engine

library
  exposed-modules:
    Popcorn.Engine.Application
    Popcorn.Engine.Engine
    Popcorn.Engine.Exception
    Popcorn.Engine.Managed.Extra
    Popcorn.Engine.Platform.GLFW
    Popcorn.Engine.Platform.GLFW.Utils
    Popcorn.Engine.Platform.GLFW.Vulkan
    Popcorn.Engine.Platform.GLFW.Window
    Popcorn.Engine.Renderer.Vulkan
    Popcorn.Engine.Renderer.Vulkan.Image
    Popcorn.Engine.Renderer.Vulkan.Instance
    Popcorn.Engine.Renderer.Vulkan.LogicalDevice
    Popcorn.Engine.Renderer.Vulkan.PhysicalDevice
    Popcorn.Engine.Renderer.Vulkan.Platform.GLFW
    Popcorn.Engine.Renderer.Vulkan.Surface
    Popcorn.Engine.Renderer.Vulkan.Swapchain
    Popcorn.Engine.Renderer.Vulkan.Utils
    Popcorn.Engine.Settings

  other-modules:
    Paths_Engine
    Popcorn.Engine.Renderer.Vulkan.Internal.Surface
    Popcorn.Engine.Renderer.Vulkan.Internal.Vulkan

  build-depends:
      base >=4.14 && <4.15
    , bytestring
    , Common
    , containers
    , GLFW-b >=3.3 && <4.0
    , managed
    , optparse-applicative
    , text
    , time
    , transformers
    , vector
    , vulkan >=3.9 && <4.0

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wpartial-fields
    -Wmissing-deriving-strategies
    -Wunused-packages
    -fhide-source-paths
    -freverse-errors

  default-extensions:
    DerivingStrategies
    LambdaCase
    OverloadedLists
    OverloadedStrings
    ScopedTypeVariables
    RecordWildCards
